--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href="css/style.css">
-    <title>Icone</title>
+    <title>Icons</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div class="header-top">
+            <h1>FontIcons</h1>
+        </div>
+        <!-- filtro icone -->
+        <div class="header-bottom">
+            <label for="filter-icons">filtra per tipo</label>
+            <select name="filter-icons" id="filter-icons">
+              <option value="all">all</option>
+              <option value="vegetable">vegetable</option>
+              <option value="animals">animals</option>
+              <option value="user">user</option>
+            </select>
+        </div>
+    </header>
+    <!-- Main -->
+    <main>
+        <div class="container ">
+            <template id="tpl-box-icon">
+              <div class="box-icon">
+                 <i class=""></i>
+                 <span>nome</span>
+             </div>
+            </template>
+
+        </div>
+    </main>
     <script src="js/data.js"></script>
 </body>
 </html>
